--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,10 @@
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "dotenv": "^8.1.0",
-    "graphql-yoga": "^1.18.2"
+    "graphql-tools": "^4.0.5",
+    "graphql-yoga": "^1.18.2",
+    "merge-graphql-schemas": "^1.7.0",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
